Updated car platform with new backend features and UI improvements